@@ -30,6 +30,7 @@ import de.rwth.idsg.steve.web.dto.DataExportForm;
 import de.rwth.idsg.steve.web.dto.EndpointInfo;
 import de.rwth.idsg.steve.web.dto.SettingsForm;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.joda.time.DateTime;
 import org.joda.time.DateTimeZone;
 import org.springframework.http.HttpHeaders;
@@ -135,7 +136,7 @@ public class AboutSettingsController {
                           HttpServletResponse response) throws IOException {
         String fileName = "data-export_" + System.currentTimeMillis() + ".zip";
         String headerKey = "Content-Disposition";
-        String headerValue = String.format("attachment; filename=\"%s\"", fileName);
+        String headerValue = "attachment; filename=\"%s\"".formatted(fileName);
         response.setHeader(headerKey, headerValue);
         response.setContentType("application/zip");
 
@@ -148,7 +149,13 @@ public class AboutSettingsController {
             throw new SteveException.BadRequest("File is empty");
         }
 
-        if (!file.getOriginalFilename().endsWith(".zip")) {
+        String fileName = file.getOriginalFilename();
+
+        if (StringUtils.isEmpty(fileName)) {
+            throw new SteveException.BadRequest("File name is empty");
+        }
+
+        if (!fileName.endsWith(".zip")) {
             throw new SteveException.BadRequest("File must be a ZIP archive");
         }
 
